# taiga_to_bpm

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile_  README.md  add_taiga_id_field.sql  compose.yaml  compose_run.yaml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_base.txt  traceback.txt
bot_interface/: __main__.py  bot_commands.md  bot_instance.py  handlers.py  pdf_output.py  report_generator.py  topay_closer.py  user_roles.py
bot_interface/utils/: send_file.py
core/: models.py
db/: db_worker.py  redis_instance.py
db/sql_scripts/: .sqlfluff  add_taiga_id_field.sql  bpm_tasks_hours.sql  bpm_us_hours.sql  new_project.sql  product_notify_function.sql  product_notify_trigger.sql  remove_old_trigger.sql  task_after.sql  task_before.sql  task_custom_attribute_value_after.sql  tasks_hours_view.sql  timeline_notify_function.sql  timeline_notify_trigger.sql  update_us_estimate_not_finished.sql  update_us_estimate_total.sql  update_us_status.sql  update_us_tracked_total.sql
db/sql_scripts/reports/: sprint_us_hours.sql
docs/: example.md  handlers.md  index.md  models.md  table.md  table_latex.md
notification_listener/: __init__.py  __main__.py  data_storage.py  interfaces.py  listener.py  processor.py  telegram_sender.py
notification_listener/application/: event_processor.py  notification_sender.py
notification_listener/domain/common/: interfaces.py  models.py  notifications.py
notification_listener/domain/event/: interfaces.py  models.py  usecases.py
notification_listener/domain/project/: models.py
notification_listener/domain/task/: interfaces.py  models.py  usecases.py
notification_listener/domain/user/: models.py
notification_listener/domain/userstory/: interfaces.py  models.py  usecases.py
notification_listener/infrastructure/: event_factory.py
notification_listener/infrastructure/handlers/: task_handler.py  task_service.py  userstory_handler.py  userstory_service.py
notification_listener/infrastructure/repositories/: user_repository.py
notification_listener/infrastructure/telegram/: notification_formatter.py  notification_sender.py
taiga_to_bpm/: __main__.py  creatio.py  creatio_constants.py  creatio_worker.py
tests/: test_bot.py  test_create_receipt.py  test_db_worker.py  test_utils.py
