[project]
name = "taiga-to-bpm"
version = "0.1.0"
description = ""
authors = [
    {name = "sumarokov", email = "sumarokov.vp@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "sl-creatio-connector>=0.1.7",
    "pytelegrambotapi>=4.16.1",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.1.18",
    "prettytable>=3.10.0",
    "pydantic>=2.7.0",
    "redis>=5.0.3",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.18",
    "mkdocstrings>=0.24.3",
    "mkdocstrings-python>=1.9.2",
    "pypandoc>=1.13",
    "validators>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.1",
    "mypy>=1.9.0",
    "types-requests>=2.31.0.20240406",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "db",
  "easy_p2p",
  "back_office",
]

[tool.pyright]
stubPath = "/stubs"
venv= ".venv"
venvPath = "."
reportUnusedVariable = false
reportUnusedImport = false
severityLevel = "none"
exclude= [
  "stubs/",
  "alembic/",
  "env_.py",
  ".venv",
]

[tool.isort]
import_heading_stdlib= "Standard Library"
import_heading_thirdparty= "Third Party Stuff"
import_heading_firstparty= "My Stuff"

multi_line_output= 5
line_length= 60
combine_as_imports= "True"
include_trailing_comma= "True"
force_grid_wrap= 2

[tool.ruff]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
lint.select = [
  "E",
  "F",
  # "B",
  # "N", 
  # "C", 
  # "T", 
  # "W",
]
lint.ignore = [
  "E712", # comparison-with-callable use "is" instead of "=="
  "E711", # comparison-with-callable use "is" instead of "=="
]
# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
lint.unfixable = ["B"]
exclude = [
  'db/alchemy_models\.py$',
  'stubs/',
  'alembic/',
]

[tool.ruff.lint.per-file-ignores]
"easy_p2p/__main__.py" = [
  "F401", # disable unused imports for main.py - import handlers from other files
  "E402", # disable module level import not at top of file for main.py - import handlers from other files
]

[tool.mypy]
# ignore_missing_imports = true
no_implicit_optional = false
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = [
  'stubs/',
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "types-requests>=2.32.0.20250328",
]
